<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/idRLContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddActivity"
    android:background="@mipmap/background">

    <TextView
        android:id="@+id/profileUserName"
        android:layout_width="match_parent"
        android:layout_height= "wrap_content"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="20dp"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completed"
        android:layout_below="@id/profileUserName"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_marginStart="140dp"/>

    <TextView
        android:id="@+id/completedCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_below="@id/profileUserName"
        android:layout_toEndOf="@id/completed"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/playing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playing"
        android:layout_below="@id/completed"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_marginStart="140dp"/>

    <TextView
        android:id="@+id/playingCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_below="@id/completed"
        android:layout_toEndOf="@id/playing"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/onhold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_hold"
        android:layout_below="@id/playing"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_marginStart="140dp"/>

    <TextView
        android:id="@+id/onholdCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_below="@id/playing"
        android:layout_toEndOf="@id/onhold"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/wanttoplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/want_to_play"
        android:layout_below="@id/onhold"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_marginStart="140dp"/>

    <TextView
        android:id="@+id/wanttoplayCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_below="@id/onhold"
        android:layout_toEndOf="@id/wanttoplay"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_marginStart="10dp"
        />

    <TextView
        android:id="@+id/dropped"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dropped"
        android:layout_below="@id/wanttoplay"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_marginStart="140dp"/>

    <TextView
        android:id="@+id/droppedCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_below="@id/wanttoplay"
        android:layout_toEndOf="@id/dropped"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_marginStart="10dp"
        />

    <TextView
        android:id="@+id/totalHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_hours"
        android:layout_below="@id/dropped"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_marginStart="140dp"/>

    <TextView
        android:id="@+id/totalHoursCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_below="@id/dropped"
        android:layout_toEndOf="@id/totalHours"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_marginStart="10dp"/>


    <Button
        android:id="@+id/checkId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Check list"
        android:layout_below="@id/totalHours"
        android:layout_marginTop="10dp"
        android:layout_marginStart="150dp"/>

    <ListView
        android:id="@+id/reviewListViewP"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/checkId"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/menu_navigation"
            app:fabAlignmentMode="center"
            />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</RelativeLayout>